# aviation-intelligence-system

./: .env.example  .gitattributes  .gitignore  DOCUMENTATION.md  LICENSE  README.md  conftest.py  pyproject.toml  requirements.txt
app/: app.py
data/processed/: aircraft_specs.csv  registration_to_variant.parquet
data/rag_corpus/: chunks.parquet  index.faiss  meta.pkl
data/raw/: curated_aircraft_specs.csv  variant_wiki_mapping.csv
docs/: architecture.mmd
models/cv/: classification_report.txt  clip_baseline_metrics.json  ocr_eval.json
models/nlp/: eval_results.json
models/numeric/: logreg.pkl  metrics.json  mlp.pkl  permutation_importance.json  xgboost.pkl
notebooks/: 01_eda_specs.ipynb  02_eda_images.ipynb  03_route_dataset.ipynb  04_evaluation.ipynb  05_demo.ipynb  train_vit_colab.ipynb
scripts/: generate_gradcam.py  run_nlp_eval.py  smoke_full_pipeline.py  smoke_pipeline.py
src/: pipeline.py
src/cv/: build_registration_lookup.py  clip_baseline.py  download_data.py  infer.py  ocr.py  scrape_extra_images.py  train_vit.py
src/nlp/: build_index.py  generate.py  prompts.py  retriever.py
src/numeric/: build_dataset.py  features.py  predict.py  train.py
src/utils/: build_specs.py  geo.py  scraping.py
tests/: test_geo.py
